tests/fixtures/invalid/anonymous_aggregate_parameter.c
int take(struct { int x; } point) {
    return point.x;
}

int main(void) {
    return 0;
}
